--- a/meals.html
+++ b/meals.html
@@ -57,7 +57,7 @@
         <div class="btn-group btn-group-vertical panel panel-default">
             <div class="btn-toolbar">
                 <div class="btn-group btn-group-lg">
-                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='interface.html'">
+                    <button type="submit" class="btn btn-large btn-primary" onclick="location.href='meal-create.html'">
                         Customize a new order
                     </button>
                 </div>
@@ -106,17 +106,17 @@
             <ul>
                 <strong>
                     <li>
-                        <span class=" glyphicon glyphicon-shopping-cart "></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
+                        <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Sausage & Cheese Muffin Sandwich Meal
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-time "></span>&nbsp;Mar.02, 2014 - 12:30 PM
+                        <span class="glyphicon glyphicon-time"></span>&nbsp;Mar.02, 2014 - 12:30 PM
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-map-marker "></span>&nbsp;Engelhalt Room 325
+                        <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 325
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-transfer "></span>&nbsp; Prepare to deliver
-                        <button type="submit " class="btn btn-small btn-primary " onclick="location.href='interface.html' " style="float: right; ">
+                        <span class="glyphicon glyphicon-transfer"></span>&nbsp; Prepare to deliver
+                        <button type="submit" class="btn btn-small btn-primary" onclick="location.href='meal-edit.html'" style="float: right;">
                             Edit
                         </button>
                     </li>
@@ -131,15 +131,15 @@
             <ul>
                 <strong>
                     <li>
-                        <span class=" glyphicon glyphicon-shopping-cart "></span>&nbsp;Hot Pepper Chicken</li>
+                        <span class="glyphicon glyphicon-shopping-cart"></span>&nbsp;Hot Pepper Chicken</li>
                     <li>
-                        <span class=" glyphicon glyphicon-time "></span>&nbsp;Feb.22, 2014 - 6:30 PM
+                        <span class="glyphicon glyphicon-time"></span>&nbsp;Feb.22, 2014 - 6:30 PM
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-map-marker "></span>&nbsp;Engelhalt Room 226
+                        <span class="glyphicon glyphicon-map-marker"></span>&nbsp;Engelhalt Room 226
                     </li>
                     <li>
-                        <span class=" glyphicon glyphicon-transfer "></span>&nbsp; Delivered
+                        <span class="glyphicon glyphicon-transfer"></span>&nbsp; Delivered
                     </li>
                 </strong>
             </ul>
