--- a/meals-create.html
+++ b/meals-create.html
@@ -79,15 +79,15 @@
                 </div>
                 <div class="form-group">
                     <label>Location</label>
-                    <input type="location" class="form-control" name="Location" placeholder="Enter Location" style="width: 230px;">
+                    <input type="location" class="form-control" placeholder="Enter Location" style="width: 230px;">
                 </div>
                 <div class="form-group">
                     <label>Time</label>
-                    <input type="time" class="form-control" name="mtime" style="width: 230px;">
+                    <input type="time" class="form-control" id="mtime" style="width: 230px;">
                 </div>
                 <div class="form-group">
                     <label>Date</label>
-                    <input type="date" class="form-control" name="mdate" id="datePicker" style="width: 230px;">
+                    <input type="date" class="form-control" id="mdate" value="" style="width: 230px;">
                 </div>
                 <button type="submit" class="btn btn-default">Submit</button>
             </form>
@@ -115,8 +115,21 @@
         }
     });
     $(document).ready(function() {
-        var a = new Date().toDateInputValue();
-        console.log(a.toString());
+        var date = new Date();
+        var d = date.getDate();
+        var dd = (d < 10) ? '0' + d : d;
+        var mo = date.getMonth() + 1;
+        var momo = (mo < 10) ? '0' + mo : mo;
+        var yyyy = date.getYear() + 1900;
+        var mdate = yyyy + '-' + momo + '-' + dd;
+        document.getElementById("mdate").value = mdate;
+
+        var h = date.getHours();
+        var hh = (h < 10) ? '0' + h : h;
+        var min = date.getMinutes();
+        var minmin = (min < 10) ? '0' + min : min;
+        var mtime = hh + ':' + minmin;
+        document.getElementById("mtime").value = mtime;
     })
     </script>
 
