--- a/meals-edit.html
+++ b/meals-edit.html
@@ -82,11 +82,11 @@
                 </div>
                 <div class="form-group">
                     <label>Time</label>
-                    <input type="time" class="form-control" name="mtime" value="12:30" style="width: 230px;">
+                    <input type="time" class="form-control" id="mtime" value="12:30" style="width: 230px;">
                 </div>
                 <div class="form-group">
                     <label>Date</label>
-                    <input type="date" class="form-control" name="mdate" value="2013-03-02" style="width: 230px;">
+                    <input type="date" class="form-control" id="mdate" value="2013-03-02" style="width: 230px;">
                 </div>
                 <button type="submit" class="btn btn-default">Re-submit</button>&nbsp;&nbsp;&nbsp;&nbsp;
                 <button class="btn btn-default">Delete Order</button>
