--- a/activity-launch.html
+++ b/activity-launch.html
@@ -32,55 +32,86 @@
 
 <body>
     <div id="include_navBar"></div>
-    <!-- This is a templete, do any thing between this line and the next comment line -->
-    <h1 class="text-center">LAUNCH NEW</h1>
-    <p></p>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row-fluid">
-            <form role="form">
-                <p class="help-block meal-font">* is required.</p>
-                <div class="form-group meal-font">
-                    <label>Host Name</label>
-                    <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)">
+            <div class="col-md-12 col-sm-12">
+                <h1 class="text-center">LAUNCH NEW</h1>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-2 col-sm-0"></div>
+            <div class="col-md-8 col-sm-12">
+                <form role="form">
+                    <p class="help-block meal-font">
+                        <span style="color: #FF0000;">*</span>is required.</p>
+                    <div class="form-group meal-font">
+                        <label>Host Name</label>
+                        <input type="name" class="form-control" id="Name" placeholder="Enter Name(Nickname)" value="P. Linda">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>
+                            <span style="color: #FF0000;">*</span>Activity Title</label>
+                        <input type="title" class="form-control" id="Title" placeholder="Enter Title">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>
+                            <span style="color: #FF0000;">*</span>Email address</label>
+                        <input type="email" class="form-control" id="Email" placeholder="Enter Email">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>
+                            <span style="color: #FF0000;">*</span>Telephone:</label>
+                        <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>
+                            <span style="color: #FF0000;">*</span>Location</label>
+                        <input type="location" class="form-control" id="Location" placeholder="Enter Location">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>Tag</label>
+                        <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>
+                            <span style="color: #FF0000;">*</span>Capacity</label>
+                        <input type="number" id="Capacity" class="form-control">
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>Activity Description(300 characters)</label>
+                        <textarea class="form-control" rows="3"></textarea>
+                    </div>
+                    <div class="form-group meal-font">
+                        <label>Picture Upload</label>
+                        <input type="file" id="Picture">
+                    </div>
+                </form>
+            </div>
+            <div class="col-md-2 col-sm-0"></div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-4 col-sm-0"></div>
+            <div class="col-md-4 col-sm-12">
+                <div class="btn-toolbar text-center" role="toolbar">
+                    <div class="btn-group btn-group-lg" style="width: 48%;">
+                        <button class="btn btn-primary" type="button" onclick="location.href='activity-confirm.html'" style="width: 100%;">SUBMIT</button>
+                    </div>
+                    <div class="btn-group btn-group-lg" style="width: 48%;">
+                        <button class="btn btn-primary" type="button" onclick="location.href='activity.html'" style="width: 100%;">BACK</button>
+                    </div>
                 </div>
-                <div class="form-group meal-font">
-                    <label>*Activity Title</label>
-                    <input type="title" class="form-control" id="Title" placeholder="Enter Title">
-                </div>
-                <div class="form-group meal-font">
-                    <label>*Email address</label>
-                    <input type="email" class="form-control" id="Email" placeholder="Enter Email">
-                </div>
-                <div class="form-group meal-font">
-                    <label>*Telephone:</label>
-                    <input type="telephone" class="form-control" id="Tel" placeholder="Enter Tel#">
-                </div>
-                <div class="form-group meal-font">
-                    <label>*Location</label>
-                    <input type="location" class="form-control" id="Location" placeholder="Enter Location">
-                </div>
-                <div class="form-group meal-font">
-                    <label>Tag</label>
-                    <input type="tag" class="form-control" id="Tag" placeholder="Enter Tag">
-                </div>
-                <div class="form-group meal-font">
-                    <label>*Capacity</label>
-                    <input type="number" id="Capacity" class="form-control">
-                </div>
-                <div class="form-group meal-font">
-                    <label>Activity Description(300 characters)</label>
-                    <textarea class="form-control" rows="3"></textarea>
-                </div>
-                <div class="form-group meal-font">
-                    <label>Picture Upload</label>
-                    <input type="file" id="Picture">
-                </div>
-                <div class="left">
-                    <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity-confirm.html'">SUBMIT</button>
-                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-                    <button class="btn btn-primary btn-lg" type="button" onclick="location.href='activity.html'">BACK</button>
-                </div>
-            </form>
+            </div>
+            <div class="col-md-4 col-sm-0"></div>
+        </div>
+        <div class="row-fluid">
+            <div class="col-md-12 col-sm-12">
+                <br/>
+            </div>
         </div>
     </div>
 </body>
